listener bottomsheet acabado

--- a/app/src/main/res/layout/holder_aisle.xml
+++ b/app/src/main/res/layout/holder_aisle.xml
@@ -32,10 +32,11 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
-                android:fontFamily="@font/lexend_semibold"
+                android:fontFamily="@font/alata"
                 android:text="Your List"
                 android:textColor="@color/green"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
