--- a/app/src/main/res/layout/modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/modal_bottom_sheet.xml
@@ -20,10 +20,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="35dp"
-        android:fontFamily="@font/lexend_semibold"
+        android:fontFamily="@font/alata"
         android:text="New Item"
         android:textColor="#2BCB8A"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +47,7 @@
             android:id="@+id/inputItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lexend_light"
+            android:fontFamily="@font/alata"
             android:hint="Food item"
             android:inputType="text"
             android:textColor="@color/green"
@@ -73,7 +74,7 @@
             android:id="@+id/inputQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lexend_light"
+            android:fontFamily="@font/alata"
             android:hint="Quantity (optional)"
             android:inputType="text"
             android:textColor="@color/green"
@@ -99,7 +100,7 @@
             android:id="@+id/inputList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lexend_light"
+            android:fontFamily="@font/alata"
             android:hint="List (optional)"
             android:inputType="text"
             android:textColor="@color/green"
