--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -75,11 +75,12 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-            android:fontFamily="@font/lexend_bold"
+            android:fontFamily="@font/alata"
             android:text="Add something to your shopping list!"
             android:textAlignment="center"
             android:textColor="?attr/colorPrimary"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
