--- a/app/src/main/res/layout/fragment_buscador_ingredientes.xml
+++ b/app/src/main/res/layout/fragment_buscador_ingredientes.xml
@@ -50,7 +50,7 @@
             android:id="@+id/rvBuscadorIngredientes"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:visibility="visible" />
+            android:visibility="gone" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <ImageView
