--- a/app/src/main/res/layout/fragment_listado.xml
+++ b/app/src/main/res/layout/fragment_listado.xml
@@ -40,8 +40,7 @@
         app:layout_constraintHorizontal_bias="0.0"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
