--- a/app/src/main/res/layout/sugerencias.xml
+++ b/app/src/main/res/layout/sugerencias.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp">
@@ -9,19 +10,9 @@
         android:id="@+id/searchItemID"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imvImageSugerencia"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imvImageSugerencia"
-        app:layout_constraintTop_toTopOf="@+id/imvImageSugerencia" />
-
-    <ImageView
-        android:id="@+id/imvImageSugerencia"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
