--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
         <item>@font/alata</item>
+        <item>@font/handlee</item>
         <item>@font/indie_flower</item>
         <item>@font/lexend_bold</item>
         <item>@font/lexend_light</item>
