--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -47,6 +47,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginBottom="30dp"
+                android:fontFamily="@font/alata"
                 android:text="Ingredients"
                 android:textAlignment="center"
                 android:textSize="20sp"
