--- a/app/src/main/res/layout/holder_elab.xml
+++ b/app/src/main/res/layout/holder_elab.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="28dp"
+        android:fontFamily="@font/alata"
         android:text="Tartaleta"
         android:textSize="18sp"
         android:textStyle="bold"
