--- a/app/src/main/res/layout/holder_ingredient.xml
+++ b/app/src/main/res/layout/holder_ingredient.xml
@@ -12,7 +12,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
+        android:fontFamily="@font/handlee"
         android:text="Coliflor"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,10 +23,12 @@
         android:id="@+id/tvCantidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="250dp"
+        android:layout_marginStart="40dp"
+        android:fontFamily="@font/handlee"
         android:text="1"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvName"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/tvName"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -33,10 +37,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/handlee"
         android:text="tbsp"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvCantidad"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/tvCantidad"
         app:layout_constraintTop_toTopOf="@+id/tvCantidad"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
