--- a/app/src/main/res/layout/holder_steps.xml
+++ b/app/src/main/res/layout/holder_steps.xml
@@ -13,7 +13,9 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
+        android:fontFamily="@font/handlee"
         android:text="Preheat the oven to 200 degrees F."
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvNumStep"
@@ -27,7 +29,9 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:fontFamily="@font/indie_flower"
         android:text="1"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
