buscador de recetas por nutrientes

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,8 +15,11 @@
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/ShoppingListFragment" />
         <action
-            android:id="@+id/action_HomeFragment_to_buscadorIngredientes2"
+            android:id="@+id/action_HomeFragment_to_buscadorIngredientes"
             app:destination="@id/buscadorIngredientes2" />
+        <action
+            android:id="@+id/action_HomeFragment_to_buscadorNutrientes"
+            app:destination="@id/buscadorNutrientes" />
     </fragment>
     <fragment
         android:id="@+id/ShoppingListFragment"
@@ -35,6 +38,15 @@
         tools:layout="@layout/fragment_buscador_ingredientes" >
         <action
             android:id="@+id/action_buscadorIngredientes2_to_HomeFragment"
+            app:destination="@id/HomeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/buscadorNutrientes"
+        android:name="com.example.trabajo_final_t3.ui.fragments.BuscadorNutrientes"
+        android:label="fragment_buscador_nutrientes"
+        tools:layout="@layout/fragment_buscador_nutrientes" >
+        <action
+            android:id="@+id/action_buscadorNutrientes_to_HomeFragment"
             app:destination="@id/HomeFragment" />
     </fragment>
 </navigation>
