elimina ingredientes en concreto y busca recetas según lo que haya en el recyclerView

--- a/app/src/main/res/layout/fragment_buscador_ingredientes.xml
+++ b/app/src/main/res/layout/fragment_buscador_ingredientes.xml
@@ -67,6 +67,7 @@
         android:id="@+id/tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/alata"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -77,6 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#B3A8F3"
+        android:fontFamily="@font/alata"
         android:text="Search Recipe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
