--- a/app/src/main/res/layout/ingredientes.xml
+++ b/app/src/main/res/layout/ingredientes.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/alata"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/imvImagenIngredienteEnRV"
         app:layout_constraintEnd_toStartOf="@+id/imvDeleteIngredient"
