--- a/app/src/main/res/layout/sugerencias.xml
+++ b/app/src/main/res/layout/sugerencias.xml
@@ -10,6 +10,7 @@
         android:id="@+id/searchItemID"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/alata"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
