--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -15,6 +15,6 @@
     <item
         android:id="@+id/buscadorIngredientes"
         android:icon="@drawable/baseline_search_24"
-        android:title="Buscador"
+        android:title="Search"
         app:showAsAction="ifRoom" />
 </menu>
