--- a/app/src/main/res/layout/fragment_tablayout_buscador.xml
+++ b/app/src/main/res/layout/fragment_tablayout_buscador.xml
@@ -9,7 +9,7 @@
         app:layout_scrollFlags="scroll|enterAlways">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbarSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="0dp" />
