--- a/app/src/main/res/layout/fragment_tablayout_buscador.xml
+++ b/app/src/main/res/layout/fragment_tablayout_buscador.xml
@@ -1,18 +1,26 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         app:layout_scrollFlags="scroll|enterAlways">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbarSearch"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="0dp" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/green"
+            android:elevation="0dp"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ToolbarColoredBackArrow"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:titleTextColor="@color/yellow" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tablayout"
